--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ng-qs-course-bs",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "mock-server": "json-server --watch server/db.json"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "@angular/platform-browser": "~8.0.0-beta.10",
     "@angular/platform-browser-dynamic": "~8.0.0-beta.10",
     "@angular/router": "~8.0.0-beta.10",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -29,12 +32,13 @@
     "@angular/cli": "~8.0.0-beta.10",
     "@angular/compiler-cli": "~8.0.0-beta.10",
     "@angular/language-service": "~8.0.0-beta.10",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.14.2",
     "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
