--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "~8.0.0-beta.10",
     "@angular/platform-browser-dynamic": "~8.0.0-beta.10",
     "@angular/router": "~8.0.0-beta.10",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
