--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "mock-server": "json-server --watch server/db.json"
+    "mock-server": "json-server --watch server/db.json",
+    "auth-server": "node server/server.js"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "json-server": "^0.14.2",
+    "jsonwebtoken": "^8.5.1",
     "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
